# system-intelligence-benchmark

./: .gitignore  README.md  pyproject.toml
benchmarks/sysmobench/sysmobench_core/: .gitignore  .gitmodules  LICENSE  Makefile  README.md  go.mod  pyproject.toml  requirements.txt
benchmarks/sysmobench/sysmobench_core/.devcontainer/: Dockerfile  devcontainer.json
benchmarks/sysmobench/sysmobench_core/config/: models.yaml
benchmarks/sysmobench/sysmobench_core/data/invariant_templates/curp/: invariants.yaml
benchmarks/sysmobench/sysmobench_core/data/invariant_templates/dqueue/: invariants.yaml
benchmarks/sysmobench/sysmobench_core/data/invariant_templates/etcd/: invariants.yaml
benchmarks/sysmobench/sysmobench_core/data/patches/: asterinas_tla_trace.patch  etcd-raft-v3.5.12.patch  xline-instrumented.patch
benchmarks/sysmobench/sysmobench_core/data/trace_based/: asterinas_based.txt  curp_based.txt  etcd_based.txt  redisraft_based.txt  tracelink_based.txt
benchmarks/sysmobench/sysmobench_core/data/tracelink_prompts/: prompt.txt
benchmarks/sysmobench/sysmobench_core/docs/: Usage.md  add_new_system.md  metrics.md
benchmarks/sysmobench/sysmobench_core/scripts/: run_benchmark.py  setup_tools.py
benchmarks/sysmobench/sysmobench_core/tests/test_models/: __init__.py  test_model_connection.py
benchmarks/sysmobench/sysmobench_core/tla_eval/: __init__.py  cli.py  config.py  setup_cli.py
benchmarks/sysmobench/sysmobench_core/tla_eval/core/: __init__.py
benchmarks/sysmobench/sysmobench_core/tla_eval/evaluation/: __init__.py
benchmarks/sysmobench/sysmobench_core/tla_eval/methods/: __init__.py  base.py
benchmarks/sysmobench/sysmobench_core/tla_eval/models/: __init__.py  anthropic_adapter.py  base.py  exist_spec_adapter.py  factory.py  genai_adapter.py  openai_adapter.py
benchmarks/sysmobench/sysmobench_core/tla_eval/tasks/: __init__.py  loader.py
benchmarks/sysmobench/sysmobench_core/tla_eval/utils/: __init__.py  output_manager.py  repository_manager.py  setup_utils.py
cli/: README.md  install.sh  (+2 more)
(+273 files in other folders)
